<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.poltak_1202154218_modul3.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/airImageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/airImageDetail" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/airImageDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/title_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
        <TextView
            android:id="@+id/newsTitleDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/airImageDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/news_label"
            android:textColor="?android:textColorSecondary" />
        <TextView
            android:id="@+id/subTitleDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitleDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/filler_text" />
        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/subTitleDetail"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_battery"
            android:id="@+id/galon"
            />

        <LinearLayout
            android:layout_below="@+id/galon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decreaseVal"
                android:contentDescription="@string/minus_button"
                android:src="@drawable/ic_minus" />

            <TextView

                android:id="@+id/water_count"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_litre"/>


            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="increaseVal"
                android:contentDescription="@string/plus_button"
                android:src="@drawable/ic_plus" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
